# pickle

./: .gitignore  README.md  pickle.cabal
app/: Config.hs  Files.hs  Main.hs
src/: Pickle.hs
src/Pickle/: Config.hs  Everything.hs  Files.hs  Main.hs  Pandoc.hs  Template.hs  Types.hs  Utils.hs
