name:                pickle
version:             0.1.0.0
synopsis:            Hakyll-like static site generator based more tightly on Pandoc
description:         Please see README.md
homepage:            https://github.com/themattchan/pickle
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@themattchan.com
copyright:           2016 Matthew Chan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pickle
                     , Pickle.Types
                     , Pickle.Config
                     , Pickle.Files
                     , Pickle.Everything
                     , Pickle.Template
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , pandoc >= 1.17 && < 1.18
                     , pandoc-types >= 1.16 && < 1.18
                     , blaze-html
                     , blaze-markup
                     , directory
                     , filepath
                     , turtle
                     , either
                     , text
  default-language:    Haskell2010

executable pickle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pickle
  default-language:    Haskell2010
